unpackaged/main/default/objects/FSL__FSL_Operation__c/FSL__FSL_Operation__c.object-meta.xml
<CustomObject>
    <label>FSL Operation</label>
    <nameField>
        <label>FSL Operation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Operations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>