unpackaged/main/default/objects/FSL__FSL_Operation__c/fields/FSL__featureMetric__c.field-meta.xml
<CustomField>
    <fullName>FSL__featureMetric__c</fullName>
    <label>Feature Metric</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>