unpackaged/main/default/objects/FSL__FSL_Operation__c/fields/FSL__Finished__c.field-meta.xml
<CustomField>
    <fullName>FSL__Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finished</label>
    <type>Checkbox</type>
</CustomField>