unpackaged/main/default/objects/FSL__FSL_Operation__c/fields/FSL__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL__Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>UnSchedule</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Get Candidates</fullName>
            </value>
            <value>
                <fullName>Appointment Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>