unpackaged/main/default/objects/FSL__FSL_Operation__c/fields/FSL__ResultText__c.field-meta.xml
<CustomField>
    <fullName>FSL__ResultText__c</fullName>
    <label>ResultText</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>